--- a/src/app/drafts/matchup-overview/matchup.scss
+++ b/src/app/drafts/matchup-overview/matchup.scss
@@ -1,4 +1,5 @@
 .widget-container {
+  width: fit-content;
   .widget-header {
     display: flex;
     justify-content: space-between;
@@ -24,8 +25,6 @@
     max-width: 100%;
     width: fit-content;
     overflow-x: auto;
-    scrollbar-gutter: stable;
-    margin-bottom: -0.75rem;
   }
 }
 
@@ -43,6 +42,7 @@
     display: flex;
     padding: 0.5rem;
     column-gap: 1rem;
+    z-index: 4000;
 
     .details-spacer {
       flex-grow: 1;
