--- a/src/app/drafts/matchup-overview/matchup/overview/overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup/overview/overview.component.html
@@ -1,82 +1,80 @@
-<div class="widget-container">
-  <div class="overview-wrapper">
-    <div class="team-container">
-      <div class="team-header">
-        <div class="team-name-title">
-          {{ teams[0].teamName }}
-        </div>
-        @if (teams[0].coach || teams[1].coach) {
-          <div class="team-coach-title">{{ teams[0].coach }}</div>
-        }
+<div class="widget-container overview-wrapper">
+  <div class="team-container">
+    <div class="team-header">
+      <div class="team-name-title">
+        {{ teams[0].teamName }}
       </div>
-      <div class="team-body">
-        <div class="overview-row header">
-          <div class="sprite-cell"></div>
-          <div class="name-cell">Name</div>
-          <div class="speed-cell">SPE</div>
-        </div>
-        @for (pokemon of teams[0].team; track pokemon) {
-          <div class="overview-row">
-            <div class="sprite-cell">
-              <sprite [pokemon]="pokemon" flipped></sprite>
-            </div>
-            <div class="name-cell">
-              <div class="name-label">{{ pokemon.name }}</div>
-              <div class="capt-row">
-                @if (pokemon.capt?.tera) {
-                  <mat-icon svgIcon="tera"></mat-icon>
-                }
-                @if (pokemon.capt?.z) {
-                  <mat-icon svgIcon="z"></mat-icon>
-                }
-                @if (pokemon.capt?.dmax) {
-                  <mat-icon svgIcon="dmax"></mat-icon>
-                }
-              </div>
-            </div>
-            <div class="speed-cell">{{ pokemon.baseStats.spe }}</div>
-          </div>
-        }
-      </div>
+      @if (teams[0].coach || teams[1].coach) {
+        <div class="team-coach-title">{{ teams[0].coach }}</div>
+      }
     </div>
-    <div class="team-container alternate">
-      <div class="team-header">
-        <div class="team-name-title">
-          {{ teams[1].teamName }}
-        </div>
-        @if (teams[0].coach || teams[1].coach) {
-          <div class="team-coach-title">{{ teams[1].coach }}</div>
-        }
+    <div class="team-body">
+      <div class="overview-row header">
+        <div class="sprite-cell"></div>
+        <div class="name-cell">Name</div>
+        <div class="speed-cell">SPE</div>
       </div>
-      <div class="team-body">
-        <div class="overview-row header">
-          <div class="speed-cell">SPE</div>
-          <div class="name-cell">Name</div>
-          <div class="sprite-cell"></div>
-        </div>
-        @for (pokemon of teams[1].team; track pokemon) {
-          <div class="overview-row">
-            <div class="speed-cell">{{ pokemon.baseStats.spe }}</div>
-            <div class="name-cell">
-              <div class="name-label">{{ pokemon.name }}</div>
-              <div class="capt-row">
-                @if (pokemon.capt?.tera) {
-                  <mat-icon svgIcon="tera"></mat-icon>
-                }
-                @if (pokemon.capt?.z) {
-                  <mat-icon svgIcon="z"></mat-icon>
-                }
-                @if (pokemon.capt?.dmax) {
-                  <mat-icon svgIcon="dmax"></mat-icon>
-                }
-              </div>
-            </div>
-            <div class="sprite-cell">
-              <sprite [pokemon]="pokemon" flipped></sprite>
+      @for (pokemon of teams[0].team; track pokemon) {
+        <div class="overview-row">
+          <div class="sprite-cell">
+            <sprite [pokemon]="pokemon" flipped></sprite>
+          </div>
+          <div class="name-cell">
+            <div class="name-label">{{ pokemon.name }}</div>
+            <div class="capt-row">
+              @if (pokemon.capt?.tera) {
+                <mat-icon svgIcon="tera"></mat-icon>
+              }
+              @if (pokemon.capt?.z) {
+                <mat-icon svgIcon="z"></mat-icon>
+              }
+              @if (pokemon.capt?.dmax) {
+                <mat-icon svgIcon="dmax"></mat-icon>
+              }
             </div>
           </div>
-        }
+          <div class="speed-cell">{{ pokemon.baseStats.spe }}</div>
+        </div>
+      }
+    </div>
+  </div>
+  <div class="team-container alternate">
+    <div class="team-header">
+      <div class="team-name-title">
+        {{ teams[1].teamName }}
       </div>
+      @if (teams[0].coach || teams[1].coach) {
+        <div class="team-coach-title">{{ teams[1].coach }}</div>
+      }
+    </div>
+    <div class="team-body">
+      <div class="overview-row header">
+        <div class="speed-cell">SPE</div>
+        <div class="name-cell">Name</div>
+        <div class="sprite-cell"></div>
+      </div>
+      @for (pokemon of teams[1].team; track pokemon) {
+        <div class="overview-row">
+          <div class="speed-cell">{{ pokemon.baseStats.spe }}</div>
+          <div class="name-cell">
+            <div class="name-label">{{ pokemon.name }}</div>
+            <div class="capt-row">
+              @if (pokemon.capt?.tera) {
+                <mat-icon svgIcon="tera"></mat-icon>
+              }
+              @if (pokemon.capt?.z) {
+                <mat-icon svgIcon="z"></mat-icon>
+              }
+              @if (pokemon.capt?.dmax) {
+                <mat-icon svgIcon="dmax"></mat-icon>
+              }
+            </div>
+          </div>
+          <div class="sprite-cell">
+            <sprite [pokemon]="pokemon"></sprite>
+          </div>
+        </div>
+      }
     </div>
   </div>
 </div>
