add tooltips, sorting, bug fixes, update news

--- a/src/app/drafts/matchup-overview/matchup.scss
+++ b/src/app/drafts/matchup-overview/matchup.scss
@@ -1,5 +1,6 @@
 .widget-container {
   width: fit-content;
+  max-width: 100%;
   .widget-header {
     display: flex;
     justify-content: space-between;
