--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -29,16 +29,19 @@
       <mat-divider></mat-divider>
       <div class="space-y-1">
         <h2 class="w-full text-large font-nasa">
-          Planner Redesign - March 5th 2025
+          Matchup Redesign - April 3rd 2025
         </h2>
         <div class="space-y-1">
           <div class="space-y-2 grid grid-cols-1 order-2 lg:order-1">
             <div>
               <div>
-                The first of many redesigns coming to the site, the planner has
-                completely rebuilt from the ground up! Not only is it less
-                buggy, but its is also much cleaner and easier to see your
-                team's stats!
+                Another major redesign released! This new matchup design not
+                only looks more appealing but has also been optimized to make
+                the data easily visible. The Speed Tier graph has also been
+                changed to group adjacent speed tiers of the team team together.
+                Simply click to group to toggle viewing the tiers in the group.
+                Finally, this change also fixes the compatibility issues on
+                Apple devices!
               </div>
             </div>
           </div>
@@ -47,81 +50,17 @@
           >
             <div class="w-full md:w-1/2">
               <strong>Old</strong>
-              <img src="../../../assets/screenshots/about/planner.webp" />
+              <img src="../../../assets/screenshots/about/matchup1.webp" />
+              <img src="../../../assets/screenshots/about/matchup2.webp" />
             </div>
             <div class="w-full md:w-1/2">
               <strong>New</strong>
-              <img src="../../../assets/screenshots/about/planner2.webp" />
+              <img src="../../../assets/screenshots/about/matchup_2.webp" />
             </div>
           </div>
         </div>
       </div>
       <mat-divider></mat-divider>
-
-      <div class="space-y-1">
-        <h2 class="w-full text-xl font-nasa text-center">
-          Pokémon DraftZone Battle League (PDBL)
-        </h2>
-        <div
-          class="grid grid-cols-1 gap-2 lg:grid-cols-2 items-center justify-items-center"
-        >
-          <div class="space-y-2 grid grid-cols-1 order-2 lg:order-1">
-            <div>
-              <div>
-                Our very own draft league is finally here and it's called the
-                Pokémon DraftZone Battle League!
-              </div>
-              <div>
-                <h2 class="font-bold">League Details</h2>
-                <ul class="pl-3">
-                  <li><strong>Format:</strong> Singles</li>
-                  <li><strong>Ruleset:</strong> Gen 9 National Dex</li>
-                  <li>
-                    <strong>Open to:</strong> Everyone - whether you're a
-                    seasoned veteran, an eager newcomer, or just here for the
-                    thrill!
-                  </li>
-                  <li>
-                    <strong>Prizes:</strong> A prize pool for the victors!
-                  </li>
-                </ul>
-              </div>
-              <div>
-                Look forward to intense battles and epic strategies from our
-                community of passionate coaches. The PDBL is where legends will
-                be made!
-              </div>
-              <div>
-                Sign ups close Febuary 12th and drafting starts shortly after.
-                See you there!
-              </div>
-            </div>
-          </div>
-          <div class="order-1 lg:order-2 space-y-4">
-            <img
-              class="max-w-60"
-              src="../../../assets/images/battle-zone/pdbl.png"
-            />
-            <div class="space-x-2 w-full flex justify-center">
-              <button
-                class="pdblbutton"
-                routerLink="/battle-zone/pdbl"
-                mat-flat-button
-              >
-                More Details
-              </button>
-              <button
-                class="pdblbutton"
-                routerLink="/battle-zone/pdbl/sign-up"
-                mat-flat-button
-                disabled
-              >
-                Sign Up
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
       <br />
       <news-core></news-core>
     </div>
