--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedchart.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedchart.component.scss
@@ -142,7 +142,7 @@
   background-color: var(--mat-sys-surface);
   padding: 10px;
   margin: 0;
-
+  color: var(--mat-sys-on-surface);
   @include mat.checkbox-density(-3);
 
   .reset-button {
