add tier list to drafting page

--- a/src/app/league-zone/league-overview/league-overview.component.html
+++ b/src/app/league-zone/league-overview/league-overview.component.html
@@ -1,2 +1,3 @@
 <p>league-overview works!</p>
 <button routerLink="manage">Manage Leagues</button>
+<button routerLink="view/leagueidplaceholder">Example League</button>
