--- a/src/styles/app-theme.scss
+++ b/src/styles/app-theme.scss
@@ -332,3 +332,9 @@
 .cdk-overlay-container {
   z-index: 6000 !important;
 }
+
+.fancy-font {
+  font-family:
+    Nasalization RG,
+    sans-serif;
+}
