--- a/src/app/league-zone/league-tier-list/league-tier-list.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.html
@@ -1,1 +1,53 @@
-<p>league-tier-list works!</p>
+@if (tierGroups) {
+  <div class="tier-container">
+    <div class="h-fit w-full flex">
+      @for (group of tierGroups; track $index) {
+        <div class="tier-group">
+          @if (group.label !== undefined) {
+            <div class="tier-group-label">{{ group.label }}</div>
+          }
+          <div class="tier-entry-container">
+            @for (tier of group.tiers; track $index) {
+              <div class="tier">
+                <div class="tier-label">
+                  {{ tier.name }}
+                </div>
+                @for (pokemon of tier.pokemon; track $index) {
+                  @if (typeInFilter(pokemon)) {
+                    <div
+                      class="tier-entry"
+                      [ngClass]="{
+                        drafted:
+                          selectedDivision.value &&
+                          pokemon.drafted?.includes(selectedDivision.value),
+                      }"
+                    >
+                      <div class="entry-sprite">
+                        <sprite [pid]="pokemon.id"></sprite>
+                      </div>
+                      <div class="entry-name">
+                        {{ pokemon.name }}
+                      </div>
+                      @if (pokemon.banned) {
+                        <mat-icon
+                          class="restricted-icon"
+                          mat-raised-button
+                          #tooltip="matTooltip"
+                          [matTooltip]="makeBanString(pokemon.banned)"
+                        >
+                          warning
+                        </mat-icon>
+                      }
+                    </div>
+                  }
+                }
+              </div>
+            }
+          </div>
+        </div>
+      }
+    </div>
+  </div>
+} @else {
+  <loading></loading>
+}
