--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -203,7 +203,7 @@
       </div>
       <span class="toolbar-spacer"></span>
       <div class="flex flex-col items-center justify-center h-full">
-        @if (auth.isAuthenticated() | async) {
+        @if (authenticated) {
           @if (auth.user() | async; as user) {
             <button mat-stroked-button [matMenuTriggerFor]="userMenu">
               <div class="user-info-container">
@@ -214,18 +214,35 @@
               </div>
             </button>
             <mat-menu #userMenu="matMenu">
-              <button mat-menu-item routerLink="/settings">
+              <button
+                mat-menu-item
+                cdkOverlayOrigin
+                #trigger="cdkOverlayOrigin"
+                (click)="settingsOpen = !settingsOpen"
+              >
                 <mat-icon>settings</mat-icon>
                 <span>Settings</span>
               </button>
-              <button mat-menu-item (click)="auth.logout()">
+              <ng-template
+                cdkConnectedOverlay
+                [cdkConnectedOverlayOrigin]="trigger"
+                [cdkConnectedOverlayOpen]="settingsOpen"
+                (overlayOutsideClick)="settingsOpen = false"
+                (detach)="settingsOpen = false"
+                [cdkConnectedOverlayFlexibleDimensions]="true"
+                [cdkConnectedOverlayPush]="true"
+                [cdkConnectedOverlayHasBackdrop]="true"
+              >
+                <settings (closeSettings)="settingsOpen = false"></settings>
+              </ng-template>
+              <button mat-menu-item (click)="logout()">
                 <mat-icon>logout</mat-icon>
                 <span>Log Out</span>
               </button>
             </mat-menu>
           }
         } @else {
-          <button mat-stroked-button (click)="auth.login()">
+          <button mat-stroked-button (click)="login()">
             <span>Log in</span> <mat-icon>login</mat-icon>
           </button>
         }
