Tier moving logic working

--- a/src/app/league-zone/league/league.component.html
+++ b/src/app/league-zone/league/league.component.html
@@ -1,139 +1,3 @@
-<div class="main-league-container">
-  <div class="main-draft">
-    <div class="draft-bar draft-section">
-      <div class="draft-section-title">Draft Order</div>
-      <div class="draft-rounds draft-section-body">
-        @for (round of draftOrder; track $index) {
-          <div class="draft-round-container">
-            <div class="round-label">
-              <span>Round {{ $index + 1 }}</span>
-              <mat-icon>trending_flat</mat-icon>
-            </div>
-            <div class="card-container">
-              @for (pick of round; track $index) {
-                <div
-                  class="team-card"
-                  [ngClass]="{
-                    alternate: !pick.pokemon && pick.status !== 'Skipped',
-                  }"
-                >
-                  <div class="team-card-header">
-                    <span
-                      [ngClass]="{
-                        selectedTeam: pick.teamName === myTeamName,
-                      }"
-                    >
-                      {{ pick.teamName }}
-                    </span>
-                  </div>
-                  <div
-                    class="team-card-body"
-                    [ngClass]="{
-                      picking: pick.status === 'Picking',
-                    }"
-                  >
-                    <div class="team-card-icon">
-                      @if (pick.pokemon) {
-                        <sprite [pokemon]="pick.pokemon"></sprite>
-                      } @else {
-                        <mat-icon svgIcon="pokeball"></mat-icon>
-                      }
-                    </div>
-                    <div class="team-card-name">
-                      {{ pick.pokemon?.name || pick.status || "Upcoming" }}
-                    </div>
-                  </div>
-                </div>
-              }
-            </div>
-          </div>
-        }
-      </div>
-    </div>
-    <div class="tier-wrapper">
-      <app-league-tier-list></app-league-tier-list>
-    </div>
-  </div>
-  <div class="draft-panel">
-    <div class="draft-picks-main draft-section">
-      <div class="draft-section-title">My Picks</div>
-      <div class="draft-picks-container">
-        <div class="draft-pick">
-          <div class="pick-label">1st Pick</div>
-          <div class="draft-pick-backups">
-            <div class="choice-container">
-              <div class="choice-label">Choice</div>
-              <div class="choice-pokemon">
-                <div class="choice-pokemon-name">Zapdos</div>
-                <div class="choice-pokemon-sprite">
-                  <sprite [pokemon]="{ id: 'zapdos', name: 'Zapdos' }"></sprite>
-                </div>
-              </div>
-            </div>
-            <div class="choice-container alternate">
-              <div class="choice-label">Backup</div>
-              <button class="choice-select">
-                Select<mat-icon>arrow_selector_tool</mat-icon>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="draft-pick">
-          <div class="pick-label">2nd Pick</div>
-          <div class="draft-pick-backups">
-            <div class="choice-container">
-              <div class="choice-label">Choice</div>
-              <div class="choice-pokemon">
-                <div class="choice-pokemon-name">Swampert-Mega</div>
-                <div class="choice-pokemon-sprite">
-                  <sprite
-                    [pokemon]="{ id: 'swampertmega', name: 'Swampert-Mega' }"
-                  ></sprite>
-                </div>
-              </div>
-            </div>
-            <div class="choice-container alternate">
-              <div class="choice-label">Backup</div>
-              <div class="choice-pokemon">
-                <div class="choice-pokemon-name">Seismitoad</div>
-                <div class="choice-pokemon-sprite">
-                  <sprite
-                    [pokemon]="{ id: 'seismitoad', name: 'Seismitoad' }"
-                  ></sprite>
-                </div>
-              </div>
-            </div>
-            <div class="choice-container alternate">
-              <div class="choice-label">Backup</div>
-              <button class="choice-select">
-                Select<mat-icon>arrow_selector_tool</mat-icon>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <button class="planner-link fancy-font">
-      Planner <mat-icon>open_in_new</mat-icon>
-    </button>
-    <div class="my-draft-main draft-section">
-      <button class="my-draft-title draft-section-title">
-        <span>Deimos Deoxys </span><mat-icon>arrow_drop_down</mat-icon>
-      </button>
-      <ol class="my-draft-pokemons">
-        @for (pick of myDraft; track $index) {
-          <li class="my-draft-pokemon">
-            <div class="my-pokemon-index">{{ $index + 1 }}</div>
-            <div class="my-pokemon-sprite">
-              <sprite [pokemon]="pick.pokemon" flipped></sprite>
-            </div>
-            <div class="my-pokemon-name fancy-font">
-              {{ pick.pokemon.name }}
-            </div>
-            <div class="my-pokemon-tier fancy-font">{{ pick.cost }}</div>
-          </li>
-        }
-      </ol>
-    </div>
-  </div>
-</div>
+<p>league works!</p>
+<div><button routerLink="drafting">Drafting</button></div>
+<div><button routerLink="tier/edit">Edit Tier</button></div>
