--- a/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.scss
@@ -1,29 +1,10 @@
 @use "@angular/material" as mat;
 
-.tier-group {
-  &:not(:first-child) {
-    border-width: 0px 0px 0px 3px;
-    border-color: var(--mat-sys-outline);
-  }
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
 .tier-group-label {
   height: 24px;
   min-width: 4rem;
 }
 
-.tier {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: fit-content;
-  &:not(:first-child) {
-    border-width: 0px 0px 0px 2px;
-    border-color: var(--mat-sys-outline);
-  }
-}
 .tier-label {
   position: sticky;
   top: 0px;
@@ -33,41 +14,34 @@
 }
 
 .tier-entry {
-  width: fit-content;
-  height: 5.5rem;
   display: flex;
-  flex-direction: column;
-  background-color: var(--twc-page);
   align-items: center;
-  user-select: none;
-  position: relative;
-  overflow: hidden;
+  width: 10rem;
   flex-grow: 1;
   padding: 0.25rem;
   border-width: 0px 0px 1px 0px;
   border-color: var(--mat-sys-outline-variant);
   font-size: 0.875rem;
   line-height: 1.25rem;
+  column-gap: 0.25rem;
 
-  .option-group {
-    flex-shrink: 0;
-    flex-grow: 1;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    @include mat.checkbox-density(-4);
-    mat-icon {
-      color: var(--mat-sys-primary);
-      width: fit-content;
-    }
+  .entry-sprite {
+    height: 2rem;
+    width: 2rem;
   }
-}
 
-.tier-entry-container {
-  display: flex;
-  height: 100%;
+  .entry-name {
+    flex-grow: 1;
+    max-height: 2rem;
+    line-height: 1rem;
+  }
+  .button-container {
+    display: flex;
+  }
+
+  &.selected {
+    background-color: var(--mat-sys-secondary-container);
+  }
 }
 
 .restricted-icon {
@@ -87,41 +61,86 @@
   overflow: hidden;
   border-radius: 0.5rem;
   width: fit-content;
-}
 
-.tier-container {
-  overflow-y: scroll;
-  width: 100%;
-  display: flex;
-
-  .header-label {
-    background-color: var(--mat-sys-primary);
-    color: var(--mat-sys-on-primary);
-    text-align: center;
-    font-weight: bold;
-    font-family:
-      Nasalization RG,
-      sans-serif;
+  .untiered-container {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 0.25rem;
+    flex-shrink: 0;
+    width: fit-content;
+    overflow-y: auto;
+    flex-direction: column;
+    box-shadow: var(--mat-sys-level3);
+
+    .header-label {
+      text-align: center;
+      font-weight: bold;
+      font-family:
+        Nasalization RG,
+        sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 0.25rem;
+    }
   }
-}
+  .tier-container {
+    width: 100%;
+    display: flex;
+    align-items: stretch;
+    overflow-y: auto;
 
-.entry-sprite {
-  height: 4rem;
-  width: 3rem;
-}
+    .header-label {
+      background-color: var(--mat-sys-primary);
+      color: var(--mat-sys-on-primary);
+      text-align: center;
+      font-weight: bold;
+      font-family:
+        Nasalization RG,
+        sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 1rem;
+      position: relative;
+      column-gap: 0.25rem;
+      mat-icon.drag-icon {
+        position: absolute;
+        left: 0;
+        width: fit-content;
+        height: fit-content;
+        font-size: 1.2em;
+        cursor: move;
+      }
 
-.entry-name {
-  max-height: 2rem;
-  line-height: 1rem;
-  max-width: 100%;
-  font-size: 0.8em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+      mat-icon.edit-icon {
+        width: fit-content;
+        height: fit-content;
+        font-size: 1em;
+        line-height: 1em;
+      }
+    }
+    .tier-group {
+      &:not(:first-child) {
+        border-width: 0px 0px 0px 3px;
+        border-color: var(--mat-sys-outline);
+      }
+      display: flex;
+      flex-direction: column;
+
+      .tier-entry-container {
+        display: flex;
+
+        .tier {
+          display: flex;
+          flex-direction: column;
+          width: fit-content;
+          &:not(:first-child) {
+            border-width: 0px 0px 0px 2px;
+            border-color: var(--mat-sys-outline);
+          }
+        }
+      }
+    }
+  }
 }
 
 .drafted {
@@ -160,7 +179,7 @@
 
 .drag-placeholder {
   border: dotted 2px var(--mat-sys-primary);
-  height: 5.5rem;
+  height: 2.5rem;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
@@ -188,67 +207,17 @@
   }
 }
 
-mat-icon.gear-icon {
-  width: fit-content;
-  height: fit-content;
-  font-size: 1.25em;
-}
-
-mat-icon.gear-icon {
-  width: 1rem;
-  height: 1rem;
-  font-size: 1.25em;
-}
-
-.untiered-container {
-  display: flex;
-  flex-shrink: 0;
-  width: fit-content;
-  flex-direction: column;
-  box-shadow: var(--mat-sys-level3);
-  overflow-y: scroll;
-
-  .header-label {
-    text-align: center;
-    font-weight: bold;
-    font-family:
-      Nasalization RG,
-      sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 0.25rem;
-  }
-
-  .tier-entry {
+.icon-button {
+  border-radius: 100rem;
+  display: inline-flex;
+  padding: 0.125rem;
+  mat-icon {
+    font-size: 1.2em;
+    color: var(--mat-sys-secondary);
+    height: fit-content;
     width: fit-content;
-    height: 5.5rem;
-    display: flex;
-    flex-direction: column;
+  }
+  &:hover {
     background-color: var(--mat-sys-primary-container);
-    align-items: center;
-    user-select: none;
-    position: relative;
-    overflow: hidden;
-    flex-grow: 1;
-    padding: 0.25rem;
-    border-width: 0px 0px 1px 0px;
-    border-color: var(--mat-sys-outline-variant);
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    .option-group {
-      flex-shrink: 0;
-      flex-grow: 1;
-      display: flex;
-      height: 100%;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      @include mat.checkbox-density(-4);
-      mat-icon {
-        color: var(--mat-sys-primary);
-        width: fit-content;
-      }
-    }
   }
 }
