update team stats by abilities

--- a/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.html
+++ b/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.html
@@ -16,6 +16,7 @@
 
     <typestats-core
       [typechart]="opponent ? typecharts[1] : typecharts[0]"
+      [abilities]="abilities"
     ></typestats-core>
   </div>
 </div>
