--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -16,6 +16,9 @@
     <div class="title-container">
       <div class="table-label">Team Typing Statistics</div>
     </div>
-    <typestats-core [typechart]="typechart"></typestats-core>
+    <typestats-core
+      [typechart]="typechart"
+      [abilities]="abilities"
+    ></typestats-core>
   </div>
 </div>
