updated homepage and news

--- a/src/styles/app-theme.scss
+++ b/src/styles/app-theme.scss
@@ -5,6 +5,8 @@
 @use "./themes/christmas.theme" as christmas;
 
 :root {
+  --pdz-fancy: Nasalization RG, sans-serif;
+
   @include mat.theme(
     (
       color: (
