--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,96 +1,46 @@
-<div class="flex flex-col items-center w-full h-full px-6 py-8">
-  <div class="flex items-center justify-center w-full mb-6 h-1/6 md:h-1/4">
-    <h1
-      class="hidden p-1 text-5xl font-semibold lg:text-6xl md:block text-logo-bottom font-nasa w-fit"
-    >
-      POKEMON
-    </h1>
-    <div class="w-16 h-16">
-      <logo-small-svg />
+<div class="homepage-main">
+  <h1 class="title-container">
+    <span class="title-text alternate hide-small"> POKEMON </span>
+    <logo-small-svg class="title-logo" />
+    <div>
+      <span class="title-text alternate hide-large"> POKEMON </span>
+      <span class="title-text"> DRAFTZONE </span>
     </div>
-    <div class="space-y-0">
-      <h1
-        class="px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl md:hidden text-logo-bottom font-nasa w-fit"
-      >
-        POKEMON
-      </h1>
-      <h1
-        class="order-3 px-1 text-4xl font-semibold sm:text-5xl lg:text-6xl text-logo-top font-nasa w-fit"
-      >
-        DRAFTZONE
-      </h1>
-    </div>
-  </div>
-  <div class="flex flex-col w-5/6 md:w-2/3 h-5/6 md:h-3/4">
-    <div
-      class="flex-grow space-y-2 w-full px-8 py-4 overflow-y-auto border shadow h-min-0 rounded-xl bg-menu-150 border-menu-300"
-    >
-      <h2 class="w-full text-center text-2xl font-bold">News and Updates</h2>
-      <mat-divider></mat-divider>
-      <div class="space-y-1">
-        <h2 class="w-full text-large font-nasa">
-          Matchup Redesign - April 3rd 2025
-        </h2>
-        <div class="space-y-1">
-          <div class="space-y-2 grid grid-cols-1 order-2 lg:order-1">
-            <div>
-              <div>
-                Another major redesign released! This new matchup design not
-                only looks more appealing but has also been optimized to make
-                the data easily visible. The Speed Tier graph has also been
-                changed to group adjacent speed tiers of the team team together.
-                Simply click to group to toggle viewing the tiers in the group.
-                Finally, this change also fixes the compatibility issues on
-                Apple devices!
-              </div>
-            </div>
-          </div>
-          <div
-            class="w-full flex md:flex-row flex-col md:space-x-2 items-start"
-          >
-            <div class="w-full md:w-1/2">
-              <strong>Old</strong>
-              <img src="../../../assets/screenshots/about/matchup1.webp" />
-              <img src="../../../assets/screenshots/about/matchup2.webp" />
-            </div>
-            <div class="w-full md:w-1/2">
-              <strong>New</strong>
-              <img src="../../../assets/screenshots/about/matchup_2.webp" />
-            </div>
-          </div>
-        </div>
+  </h1>
+  <div class="info-container">
+    <div class="news-container">
+      <h2 class="news-title">News and Updates</h2>
+      <div class="news-wrapper">
+        <pdz-news-core></pdz-news-core>
       </div>
-      <mat-divider></mat-divider>
-      <br />
-      <news-core></news-core>
     </div>
-    <div class="grid w-full grid-cols-1 py-2 gap-y-2 gap-x-4 md:grid-cols-4">
-      <strong
-        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-150 hover:cursor-pointer border-menu-300 bg-menu-200"
-        routerLink="/about"
-      >
+    <div class="button-container">
+      <button mat-raised-button class="homepage-button" routerLink="/about">
         About Pokemon DraftZone
-      </strong>
-      <a
+      </button>
+      <button
+        mat-raised-button
         href="https://discord.gg/sQUEBW4UVx"
         target="_blank"
-        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-150 hover:cursor-pointer border-menu-300 bg-menu-200"
+        class="homepage-button"
       >
-        <strong> Join our community</strong>
-      </a>
-      <a
+        Join Our Discord
+      </button>
+      <button
+        mat-raised-button
         href="https://github.com/LumarisX/pokemon-draftzone-client"
         target="_blank"
-        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-150 hover:cursor-pointer border-menu-300 bg-menu-200"
+        class="homepage-button"
       >
-        <strong>Contribute to the project</strong>
-      </a>
-      <strong
-        class="flex items-center justify-center w-full p-1 overflow-y-auto text-center border shadow rounded-xl hover:bg-menu-150 hover:cursor-pointer border-menu-300 bg-menu-200"
+        Contribute to the Project
+      </button>
+      <button
+        mat-raised-button
+        class="homepage-button"
         routerLink="/supporters"
       >
         Project Supporters
-      </strong>
+      </button>
     </div>
   </div>
 </div>
