--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -46,12 +46,12 @@
 }
 
 .info-container {
-  padding: 0 0 1rem;
+  padding: 0 0.5rem 1rem;
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 64rem;
+  max-width: 80rem;
   flex-grow: 1;
 }
 
