--- a/src/app/pages/news-core/news-core.component.scss
+++ b/src/app/pages/news-core/news-core.component.scss
@@ -51,6 +51,8 @@
 
   .image-container {
     .size-large {
+      max-width: 24rem;
+      max-height: 24rem;
     }
     .size-medium {
       max-width: 16rem;
